Updated bat file for Windows